--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -47,6 +47,13 @@
                     android:layout_width="0dp" android:layout_height="wrap_content"
                     android:layout_weight="1" android:text="Delete"
                     android:layout_marginStart="12dp"/>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnShare"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Share"/>
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
