--- a/app/src/main/res/menu/menu_feed.xml
+++ b/app/src/main/res/menu/menu_feed.xml
@@ -8,4 +8,10 @@
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
+    <item
+        android:id="@+id/action_events"
+        android:title="Events"
+        android:icon="@android:drawable/ic_input_add"
+        app:showAsAction="ifRoom" />
+
 </menu>
