--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -126,7 +126,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:contentDescription="@string/app_name"
-            android:src="@android:drawable/ic_menu_send" />
+            android:src="@drawable/baseline_send_24" />
     </LinearLayout>
 
 </LinearLayout>
