--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,17 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/feedFragment"
-        android:icon="@android:drawable/ic_menu_view"
+        android:icon="@drawable/baseline_home_24"
         android:title="Feed"/>
-
-    <item android:id="@+id/mapFragment"
-        android:icon="@android:drawable/ic_menu_mapmode"
-        android:title="Map"/>
 
     <item android:id="@+id/addPostFragment"
         android:icon="@android:drawable/ic_input_add"
         android:title="Add"/>
 
-    <item android:id="@+id/profileFragment"
-        android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="Profile"/>
+    <item android:id="@+id/mapFragment"
+        android:icon="@drawable/baseline_map_24"
+        android:title="Map"/>
+
+
 </menu>
