--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/addEventFragment"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/baseline_add_24"
         android:title="@string/addEvent" />
+    <item
+        android:id="@+id/profileFragment"
+        android:icon="@drawable/baseline_account_circle_24"
+        android:title="Profile" />
+
+    <item android:id="@+id/group_events"
+        android:title="Events">
+        <menu>
+            <!-- Event items will be added here dynamically -->
+        </menu>
+    </item>
 </menu>
